[metadata]
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = nt, posix
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
license_files = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    beautifulsoup4
    pyhelpers >= 1.4.3

[options.packages.find]
exclude =
    tests
    *.tests
    tests.*
