[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
platforms = nt, posix
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
license_files = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    pyhelpers >= 1.5.0
    beautifulsoup4

[options.packages.find]
exclude =
    tests
    *.tests
    tests.*
