[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    Python
    Railway
    Railway Codes
    Bridges
    Computer Reservation System
    CRS
    National Location Codes
    NLC
    Timing Point Locations
    TIPLOC
    Station Number Names
    STANME
    Station Numbers
    STANOX
    Electrification
    Engineer's Line References
    ELR
    Mileage
    Line Of Route
    LOR
    Railway Line Names
    Railway Bridges
    Stations
    Signal Boxes
    Tunnels
    Viaducts
    Depots
    Tracks
platforms = nt, posix
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
license_files = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    pyhelpers >= 2.2.0
    beautifulsoup4
